<resources>
    <string name="app_name">FinalProject20S</string>
    <string name="GDS">Geo Data Source</string>
    <string name="SMH">Soccer Match Highlights</string>
    <string name="SLS">Song Lyrics Search</string>
    <string name="DSS">Deezer Song Search</string>
    <string name="kiran">By Kiranpreet</string>
    <string name="abhishek">By Abhishek</string>
    <string name="harman">By Harmanpreet</string>
    <string name="shorya">By Shorya</string>
    <string name="finalproject">FinalProject</string>
    <string name="google">Google</string>
    <string name="artist">Artist</string>
    <string name="songname">Song</string>
    <string name="textsearchlyrics">Search the lyrics of a song:</string>
    <string name="search">Search</string>
    <string name="history">History of your searches:</string>
    <string name="topsearches">Top searches:</string>
    <string name="gotofavs">Go to your favourites</string>
    <string name="help">Help</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="helpful">Was it helpful?</string>
    <string name="glad">Glad you liked it!!</string>
    <string name="feedback">Thanks for the feedback.\n We will update it soon.</string>
    <string name="updatesoon">We will update it soon!!</string>
    <string name="openagain">Open the help menu again</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="lyricsGoesHere">Lyrics Goes Here!!</string>
    <string name="addtofavs">Click here and Add to Favourites-></string>
    <string name="showlyrics">Get Lyrics</string>
    <string name="download">Download</string>
    <string name="downloadlyrics">Download the lyrics for </string>
    <string name="lyricsdownloaded">Lyrics Downloaded</string>
    <string name="goToLyrics">Go to Lyrics Page!</string>
    <string name="lyrics11">Lyrics: </string>
    <string name="showinglyrics">Showing Lyrics</string>
    <string name="hide">Hide</string>
    <string name="titlenavi">Songs lyrics search</string>
    <string name="authornavi">Harmanpreet Bedi</string>
    <string name="versionnavi">Version: 1.0</string>
    <string name="Added">Added to Favourites</string>
    <string name="delete">Delete</string>
    <string name="deletethissong">Do you want to delete this song?</string>
    <string name="aboutProject">About the project</string>
    <string name="appInstructions">Instructions for the app</string>
    <string name="aboutAPI">About API</string>
    <string name="donateProject">Donate To Project</string>
    <string name="writtenBy">This is Song Lyrics search Activity written by Harmanpreet Bedi.</string>
    <string name="appInstructions2">This app has various activities.\n You can google the song you want.\n You can search for the lyrics of any song.\n You can add it to your favourite.</string>
    <string name="aboutAPI2">This API has been generated by Harmanpreet in order to meet the requirements for finnding the lyrics of a song.</string>
    <string name="donateProject2">Donate according to your desire.</string>
    <string name="donateHere">Donate here</string>
    <string name="DonateIT">Donate</string>
    <string name="thankDonate">ThankYou For $</string>
    <string name="donation">Donation</string>


    <string name="helpinfo3">1. This is your favourite list.\n
        2. Use home button above to go to Home page.\n\n
    Was it helpful?</string>
    <string name="helpinfo2">1. These are the lyrics for clicked song.\n
    2. Use heart button below to add it to your favourites.\n
        3. Use heart button above to go to your favourites.\n\n
    Was it helpful?</string>
    <string name="helpinfo">1. Use the top search view for a Google search.\n
    2. Insert song and artist name for its lyrics.\n
    3. Top search list provides popular songs.\n
    4. Look at your favourites by clicking heart.\n\n

    Was it helpful?</string>
</resources>
