<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TopSearches">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_above="@id/googleSearch"/>
    <SearchView
        android:layout_marginTop="5dp"
        android:id="@+id/googleSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Animation"
        android:layout_toLeftOf="@+id/googlebtn"
        android:layout_alignParentLeft="true"/>
    <Button
        android:id="@+id/googlebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/google"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/searchSongLyrics"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/googleSearch"
        android:text="@string/textsearchlyrics"/>

    <EditText
        android:id="@+id/artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchSongLyrics"
        android:ems="7"
        android:inputType="textPersonName"
        android:hint="@string/artist" />

    <EditText
        android:id="@+id/songname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchSongLyrics"
        android:layout_toRightOf="@+id/artist"
        android:ems="7"
        android:inputType="textPersonName"
        android:hint="@string/songname" />
    <Button
        android:id="@+id/lyricssearchbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/songname"
        android:layout_below="@+id/searchSongLyrics"
        android:text="@string/search"/>
    <TextView
        android:id="@+id/topsearchesview"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/topsearches"
        android:layout_below="@+id/lyricssearchbtn"/>
    <ListView
        android:id="@+id/topsearcheslist"
        android:layout_width="wrap_content"
        android:layout_height="530dp"
        android:layout_below="@id/topsearchesview"/>

    <Button
        android:id="@+id/gotofavs"
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topsearcheslist"
        android:layout_marginTop="3dp"
        android:text="@string/gotofavs" />

    <Button
        android:id="@+id/helpbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topsearcheslist"
        android:layout_marginTop="3dp"
        android:layout_toRightOf="@+id/gotofavs"
        android:text="@string/help" />


</RelativeLayout>