<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:background="@drawable/musicalnotes4"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/maroon"
        android:textStyle="italic"
        android:shadowColor="@color/darkblack"
        android:text="@string/titlenavi"/>
    <TextView
        android:id="@+id/author"
        android:layout_below="@+id/title"
        android:shadowColor="@color/darkblack"
        android:textColor="@color/maroon"
        android:textStyle="italic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/authornavi"/>
    <TextView
        android:id="@+id/version"
        android:layout_below="@+id/author"
        android:shadowColor="@color/darkblack"
        android:layout_width="match_parent"
        android:textColor="@color/maroon"
        android:textStyle="italic"
        android:layout_height="wrap_content"
        android:text="@string/versionnavi"/>


</RelativeLayout>